Fixed simple large whitespace above meals section

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -207,6 +207,10 @@ header {
 /* MEALS */
 /*--------------------------------------------------------*/
 
+.section-meal {
+    padding: 0;
+}
+
 .meals-showcase {
     list-style: none;
     width: 100%;
